# pasio

./: .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  dependencies.cmake  options.cmake  pyproject.toml  setup.py  setup_linux.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-ubuntu-latest.yml  build-windows-latest.yml
cmake/: conan_provider.cmake  coverage.cmake  cpm.cmake  dev-mode.cmake  docs.cmake  install-config.cmake.in  install-rules.cmake  ipo.cmake  lint-targets.cmake  memory.cmake  packaging.cmake  sanitizers.cmake  static-analyzers.cmake  utils.cmake  variables.cmake
core/: CMakeLists.txt
core/cmake/: install-config.cmake.in  install-rules.cmake  options.cmake
core/include/my_project/core/: core.hpp
core/include/pasio/core/: core.hpp
core/pytest/: CMakeLists.txt
core/src/: core.cpp
core/test/: CMakeLists.txt
core/test/src/: core_test.cpp
fetch_content_test/: CMakeLists.txt
pasio/: CMakeLists.txt
pasio/cmake/: install-config.cmake.in  install-rules.cmake  options.cmake
pasio/example/: CMakeLists.txt  core_example.cpp
pasio/include/pasio/: errors.hpp  pasio.hpp  serial_port.hpp
pasio/include/pasio/async/: async_serial_port.hpp
pasio/include/pasio/sync/: sync_serial_port.hpp
pasio/pytest/src/: import_test.py  test.py
pasio/src/: async_serial_port.cpp  pasio.cpp  pymodule.cpp  serial_port.cpp  sync_serial_port.cpp
pasio/test/: CMakeLists.txt
pasio/test/src/: core_test.cpp
profiles/: clang-ninja-19-x64  gcc-13-x64  msvc-ninja-arm7  msvc-ninja-armx64  msvc-ninja-x32  msvc-ninja-x64
test_package/: CMakeLists.txt  CMakeUserPresets.json
utility/: CMakeLists.txt
utility/cmake/: install-rules.cmake  options.cmake
utility/example/: CMakeLists.txt
utility/include/my_project/utility/: static_string.hpp
utility/test/: CMakeLists.txt
