[project]
name = "pasio"
version = "0.1.0"
authors = [
    { name = "Ruslan Torbeev", email = "ruslan.torbeev@yandex.ru" },
    { name = "Vsevolod Chaplanov", email = "woornad@gmail.com" },
]
maintainers = [
    { name = "Ruslan Torbeev", email = "ruslan.torbeev@yandex.ru" },
    { name = "Vsevolod Chaplanov", email = "woornad@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "cmake~=3.31",
    "cmakelang~=0.6",
    "codespell~=2.4",
    "commitizen~=4.2",
    "conan~=2.12",
    "ninja~=1.11",
    "pre-commit~=4.1",
    "setuptools>=75.8.0",
]
lint = ["mypy~=1.15", "ruff~=0.9"]
test = ["pytest~=8.3"]
