[project]
name = "pasio"
version = "0.1.0"
authors = [
    {name="Ruslan Torbeev", email="r@gmail.com"}
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmakelang>=0.6.13",
    "codespell>=2.4.1",
    "conan>=2.12.1",
    "ninja>=1.11.1.3",
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.28",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[dependency-groups]
dev = [
    "toml>=0.10.2",
]
